--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -10,9 +10,9 @@
 
 <body>
   <header>
-    <h1>[Site name] Site Plan</h1>
+    <h1>[White Water Rafting] Site Plan</h1>
     <h2>[Taylor Sanders]</h2>
-    <h2>WDD 130-[section]</h2>
+    <h2>WDD 130-[01]</h2>
     <!-- In the header above, add the name of your site, your name and class number. For example if you are in section 3 you would put WDD 130-03 -->
   </header>
   <main>
@@ -20,18 +20,18 @@
     <hr />
     <h2>Overview</h2>
     <h3>Purpose</h3>
-    <p>[Your purpose here]</p>
+    <p>[Welcome! This website will take you through the whirlwind of white water rapids and show you all of what our company offers. Rafting can be a fun and safe experience and we hope to show you that. Feel free to use to website to book an oppointment and we will have you racing those rapids in no time! ]</p>
     <!-- change this -->
 
     <h3>Audience</h3>
-    <p>[Your audience here]</p>
+    <p>[Seeking adventure? You have come to the right place. This website is perfect for those who are ready for thrilling experience. We need colors that will make the audience picture nature and the rushing of water. We need content and font that is out there but not too over the top. ]</p>
     <!-- change this -->
 
     <hr />
     <h2>Branding</h2>
     <h3>Website Logo</h3>
     <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-    <img src="https://byui-wdd.github.io/wdd130/rafting_images/dryoarlogo.png" alt="Logo image" />
+    <img src="images/raftinglogo3_200.png" alt="Logo image" />
     <hr />
     <h2>Style Guide</h2>
 
