--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -10,8 +10,8 @@
 
 <body>
   <header>
-    <h1>[White Water Rafting] Site Plan</h1>
-    <h2>[Taylor Sanders]</h2>
+    <h1>White Water Rafting</h1>
+    <h2>Taylor Sanders</h2>
     <h2>WDD 130-[01]</h2>
     <!-- In the header above, add the name of your site, your name and class number. For example if you are in section 3 you would put WDD 130-03 -->
   </header>
@@ -20,11 +20,11 @@
     <hr />
     <h2>Overview</h2>
     <h3>Purpose</h3>
-    <p>[Welcome! This website will take you through the whirlwind of white water rapids and show you all of what our company offers. Rafting can be a fun and safe experience and we hope to show you that. Feel free to use to website to book an oppointment and we will have you racing those rapids in no time! ]</p>
+    <p>Welcome! This website will take you through the whirlwind of white water rapids and show you all of what our company offers. Rafting can be a fun and safe experience and we hope to show you that. Feel free to use to website to book an oppointment and we will have you racing those rapids in no time! </p>
     <!-- change this -->
 
     <h3>Audience</h3>
-    <p>[Seeking adventure? You have come to the right place. This website is perfect for those who are ready for thrilling experience. We need colors that will make the audience picture nature and the rushing of water. We need content and font that is out there but not too over the top. ]</p>
+    <p>Seeking adventure? You have come to the right place. This website is perfect for those who are ready for thrilling experience. We need colors that will make the audience picture nature and the rushing of water. We need content and font that is out there but not too over the top. </p>
     <!-- change this -->
 
     <hr />
@@ -42,8 +42,8 @@
 
     <!-- Copy and paste the URL to your finished palette below. Replace the href value that is there with yours. Make sure to paste it into both the href value and the content text of the <a> tag -->
     <p>Palette URL:</p>
-    <a href="https://coolors.co/396e94-e7c24f-a43312-381d2a-aabd8c"
-      target="_blank">https://coolors.co/396e94-e7c24f-a43312-381d2a-aabd8c</a>
+    <a href="https://coolors.co/palette/30c5ff-235789-f7e733-d1603d-161925"
+      target="_blank">https://coolors.co/palette/30c5ff-235789-f7e733-d1603d-161925</a>
 
     <table class="colors">
       <tr>
@@ -54,10 +54,10 @@
       </tr>
       <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
       <tr>
-        <td class="primary">[#396E94]</td>
-        <td class="secondary">[#E7C24F]</td>
-        <td class="accent1">[#A43312]</td>
-        <td class="accent2"></td>
+        <td class="primary">[#30C5FF]</td>
+        <td class="secondary">[#235789]</td>
+        <td class="accent1">[#F7E733]</td>
+        <td class="accent2">[#D1603D]</td>
       </tr>
     </table>
 
@@ -67,11 +67,11 @@
     <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Think also about which of your colors above you might use for background and font colors. -->
 
     <h4>
-      Heading Font: [Font Name here]
+      Heading Font: [skranji] 
       <!-- change this -->
     </h4>
     <h4>
-      Paragraph Font: [Font Name here]
+      Paragraph Font: [mukta]
       <!-- change this -->
     </h4>
     <h3>Normal paragraph example</h3>
