--- a/wwr/index.html
+++ b/wwr/index.html
@@ -9,8 +9,7 @@
     <header>
         <a href="index.html" id="logo_link">
              <img class="logo" src="images/raftinglogo3_200.png" alt="Dry Oar Logo">
-         </a>
-     </header>
+        </a>
         <nav>
             <a href="index.html">Home</a>
             <a href="#">Page 2</a>
@@ -20,7 +19,7 @@
     </header>
     <div id="hero">
         <div id="hero-box">
-            <img  id="hero-img" src="images/hero.png" and alt="People enjoying rafting">
+            <img  id="hero-img" src="images/hero.png" alt="People enjoying rafting">
         </div>
         <section id="hero-msg">
             <h1 class="home-title">Have An Adventure</h1>
