--- a/wwr/index.html
+++ b/wwr/index.html
@@ -22,7 +22,7 @@
             <img  id="hero-img" src="images/hero.png" alt="People enjoying rafting">
         </div>
         <section id="hero-msg">
-            <h1 class="home-title">Have An Adventure</h1>
+            <h1 class="home-title">Looking for Adventure?</h1>
             <h4>Make Memories with Dry Oar</h4>
             <div class="button-box">
                 <a class="book"  href="contactus.html">Book Now</a>
@@ -33,23 +33,23 @@
         <section class="rivers-card">
             <img class="card-img" src="images/rivers.jpg" alt="river in forest">
             <img class="icon" src="images/river_icon.png" alt="river icon">
-            <h2>Rivers</h2>
+            <h2>Beautiful Rivers</h2>
         </section>
         <section class="camping-card">
             <img class="card-img" src="images/camping.jpg" alt="tent in mountains">
             <img class="icon" src="images/fire_icon.png" alt="fire icon">
-            <h2>Camping</h2>
+            <h2>Many Campsites</h2>
         </section>
         <section class="rapids-card">
             <img class="card-img" src="images/rapids.jpg" alt="rafting boat">
             <img class="icon" src="images/oars.png" alt="oars icon">
-            <h2>Rapids</h2>
+            <h2>Rushing Rapids</h2>
         </section>
         <img class="mountains" src="images/mountains.jpg" alt="Misty mountains">
         <section class="msg">
-            <h2>More Than Just The Thrill</h2>
-            <p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors. </p>
-            <a class='join' href="rivers.html">Join Us</a>
+            <h2>It's More Than Just A Thrill</h2>
+            <p>Don't forget the breathtaking scenery. While rafting we will take you through valleys, meadows, canyons, high peaks and much more. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors. </p>
+            <a class='join' href="rivers.html">Join Us!</a>
         </section>
     </main>
     <footer>
