--- a/challenge/index.html
+++ b/challenge/index.html
@@ -11,10 +11,10 @@
         <h1>Education</h1>
     </header>
     <main>
-        <p>Education is the difference between wishing you could help others & being able to help them
+        <h2> Education is the difference between wishing you could help others & being able to help them
 
-            ---President Nelson</p>
-        <h2>
+            ---President Nelson</h2>
+
             <p>1. Faith in the Lord Jesus Christ</p>
 
             <p>2. Repentance</p>
@@ -22,14 +22,15 @@
             <p>3. Baptism by immersion for the remission of sins</p>
             
             <p>4. Laying on of hands for the gift of the Holy Ghost</p>
-        </h2>
+
             <img 
             src="images/russell_nelson_official_portrait_2018.jpeg" 
             alt="prophet image"/> 
         <h3>"Because of the Savior's Atonement, His gospel provides an invitation to keep changing, growing, and becoming more pure."</h3>
     </main>
     <footer>
-        <p>Russell M. Nelson</p>
-        <p>President of the Church of Jesus Christ of Latter-day Saints</p></footer>
+        <h4>Russell M. Nelson</h4>
+        President of the Church of Jesus Christ of Latter-day Saints
+    </footer>
 </body>
 </html>
