--- a/finalproject/site-plan.html
+++ b/finalproject/site-plan.html
@@ -21,17 +21,17 @@
       <hr>
       <h2>Overview</h2>
       <h3>Purpose</h3>
-      <p>[Your purpose here]</p>  <!-- change this -->
+      <p>[My purpose is to create a entertainining website that will explore facts and what went into the filmaking of the Star Wars Movies. ]</p>  <!-- change this -->
 
 
       <h3>Audience</h3>
-      <p>[Your audience here]</p>  <!-- change this -->
+      <p>[My audience is intended for Star Wars fans and also people who are interested in the movies.]</p>  <!-- change this -->
 
       <hr>
       <h2>Branding</h2>
       <h3>Website Logo</h3>
       <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-      <img src="#" alt="Logo image">
+      <img src="images/Film Works.png" alt="Film Works logo">
       <hr>
       <h2>
         Style Guide
