--- a/finalproject/site-plan.html
+++ b/finalproject/site-plan.html
@@ -31,7 +31,7 @@
       <h2>Branding</h2>
       <h3>Website Logo</h3>
       <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-      <img src="images/Film Works.png" alt="Film Works logo">
+      <img src="images/logo-resizedlightsabers.png" alt="Lightsaber logo">
       <hr>
       <h2>
         Style Guide
@@ -62,10 +62,10 @@
       <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Why did you choose what you did?  Make sure to review the list of web safe fonts at W3Schools.org as a starting point.  Think also about which of your colors above you might use for background and font colors. -->
 
       <h4>
-        Heading Font: [Font Name here]  <!-- change this -->
+        Heading Font: [Roboto Condensed]  <!-- change this -->
       </h4>
       <h4>
-        Paragraph Font: [Font Name here]  <!-- change this -->
+        Paragraph Font: [Trebuchet]  <!-- change this -->
       </h4>
       <h3>
         Normal paragraph example
@@ -125,11 +125,13 @@
       </h2>
       <h3>Home page</h3>
       <p>
-        [Written copy for the home page here]
+        [A long time ago in a galaxy far, far away..."Star Wars" is a popular and enduring science fiction franchise that was created by filmmaker George Lucas.
+        At its core, Star Wars is an epic space opera set in a distant galaxy "far, far away." The saga is known for its rich and expansive lore, featuring a diverse cast of characters, intricate world-building, and a timeless battle between the forces of good and evil. 
+        Key elements of the Star Wars universe include the mystical Force, which grants individuals special abilities, and the ongoing conflict between the Jedi, who serve as guardians of peace and justice, and the Sith, who seek power and domination.]
       </p>
       <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+        <img src="images/homepageimage1.jpg" alt="image for homepage">
+        <img src="images/rsz_homepageimagetry4.jpg" alt="image2 for homepage">
 
       </ul>
       <h3>[Page 2]</h3>
