--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -118,11 +118,11 @@
 
     <h3>Home</h3>
 
-    <img src="images/Screenshot site plan.png" alt="home page wireframe" />
+    <img src="https://byui-wdd.github.io/wdd130/rafting_images/wireframe_home.png" alt="home page wireframe" />
 
     <h3>[Page 2]</h3>
 
-    <!-- <img src="#" alt="page 2 wireframe"> -->
+    <img src="images/Screenshot site plan.png" alt="page 2 wireframe" />
   </main>
 </body>
 
