--- a/finalproject/site-plan.html
+++ b/finalproject/site-plan.html
@@ -134,22 +134,109 @@
         <img src="images/rsz_homepageimagetry4.jpg" alt="image2 for homepage">
 
       </ul>
-      <h3>[Page 2]</h3>
+      <h3>The Original Trilogy [page 2]</h3>
       <p>
-        [Written copy for the Page 2 here]
+        The first Star Wars trilogy, often referred to as the Original Trilogy, consists of three iconic films created by George Lucas and released between 1977 and 1983.
+        The trilogy introduced audiences to a timeless tale of adventure, heroism, and the battle between good and evil in a galaxy far, far away. 
+        It is also known for its timeless characters like Luke Skywalker, Princess Leia, Han Solo, and Darth Vader, as well as its groundbreaking special effects, epic space battles, and John Williams' iconic musical score.
+        It set the standard for science fiction storytelling and captured the hearts of generations of fans, leaving a lasting legacy in the world of cinema.
+        Here is a summary of the Original Trilogy:
       </p>
+
+      <p>"Star Wars: Episode IV - A New Hope" (1977):
+        The story begins with a young farm boy named Luke Skywalker living on the desert planet Tatooine.
+        Luke discovers that he is the son of Anakin Skywalker, a Jedi Knight, and is trained in the ways of the Force by Obi-Wan Kenobi.
+        Luke joins forces with Princess Leia Organa, Han Solo, and a group of rebels to stop the evil Galactic Empire and the Sith Lord, Darth Vader.
+        The film culminates in a daring attack on the Death Star, the Empire's ultimate weapon.
+      </p>  
+        
+      <p>"Star Wars: Episode V - The Empire Strikes Back" (1980):
+        The Rebel Alliance faces further challenges as the Empire strikes back in retaliation.
+        Luke continues his Jedi training with Yoda while Han Solo is captured by the Empire.
+        The film reveals the shocking truth that Darth Vader is Luke's father, Anakin Skywalker.
+        The movie ends on a somber note as the heroes face defeat and are scattered across the galaxy.
+      </p>
+        
+      <p>"Star Wars: Episode VI - Return of the Jedi" (1983):
+        The Rebel Alliance launches a daring mission to rescue Han Solo from the clutches of Jabba the Hutt.
+        Luke confronts his father, Darth Vader, and Emperor Palpatine to try and redeem him.
+        The final battle takes place on the forest moon of Endor, where the Rebels aim to destroy a new Death Star.
+        The trilogy concludes with the redemption of Anakin Skywalker and the ultimate defeat of the Empire.
+      </p>
+
       <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+        <img src="images/rsz_originalpage2image1.jpg" alt="image for Page2">
+        <img src="images/rsz_originalpage2image2.jpg" alt="image2 for Page2">
 
       </ul>
-      <h3>[Page 3]</h3>
+      <h3>The Prequels [page 3]</h3>
       <p>
-        [Written copy for the Page 3 here]
+        The Star Wars prequel trilogy, released between 1999 and 2005, serves as a chronological precursor to the Original Trilogy.
+        These films explore the rise of the Sith and the transformation of Anakin Skywalker into Darth Vader. The prequel trilogy also delves into the political machinations of the Galactic Republic, and the complexities of the Jedi Order.
+        It provides a deeper understanding of the events that shaped the galaxy and led to the rise of the Empire. While the prequels have garnered mixed reviews, they are an integral part of the larger Star Wars saga, adding depth and context to the story.
+        Here is a summary of the Star Wars prequel trilogy:
       </p>
+
+      <p> 
+        "Star Wars: Episode I - The Phantom Menace" (1999):
+        The story is set approximately 32 years before the events of "A New Hope."
+        Jedi Knights Qui-Gon Jinn and Obi-Wan Kenobi discover Anakin Skywalker, a young slave with incredible Force potential.
+        The film follows the Jedi as they encounter a Sith Lord, Darth Maul, and uncover a sinister plot orchestrated by the shadowy Sith master, Darth Sidious.
+      </p> 
+
+      <p>
+        "Star Wars: Episode II - Attack of the Clones" (2002):
+        A decade later, Anakin Skywalker has grown and is now an apprentice to Obi-Wan Kenobi.
+        Political unrest and the separatist movement threaten the Republic, leading to the creation of a clone army.
+        Anakin falls in love with Padmé Amidala, a former queen and now a senator, and their relationship becomes central to the story.
+      </p>
+
+      <p>
+        "Star Wars: Episode III - Revenge of the Sith" (2005):
+        The Clone Wars are in full swing, and Anakin Skywalker is increasingly seduced by the dark side of the Force.
+        The Republic transforms into the Galactic Empire, and the Jedi face extermination as the Sith's power expands.
+        The film concludes with a climactic duel between Anakin and Obi-Wan, Anakin's fall to the dark side, and the birth of Luke and Leia.
+      </p>
+
+      <h4>The Sequels [page 3]</h4>
+
+      <p>
+        The Star Wars sequel trilogy, released between 2015 and 2019, continues the epic saga by introducing new characters while revisiting beloved ones from the Original Trilogy. 
+        Here is a summary of the Star Wars sequel trilogy: 
+      </p>
+
+      <p>
+        "Star Wars: Episode VII - The Force Awakens" (2015):
+        The film is set about 30 years after the events of "Return of the Jedi."
+        A new threat emerges in the form of the First Order, which has risen from the remnants of the Galactic Empire.
+        Rey, a scavenger on the desert planet Jakku, discovers her latent Force abilities and crosses paths with Finn, a former Stormtrooper.
+        The Resistance, led by General Leia Organa, seeks to oppose the First Order, and the film reintroduces classic characters like Han Solo and Chewbacca.
+      </p>
+
+      <p>
+        "Star Wars: Episode VIII - The Last Jedi" (2017):
+        The Resistance is on the run from the First Order, and Rey seeks training from an aging Luke Skywalker.
+        The film explores themes of mentorship, the legacy of the Jedi, and the complexities of the Force.
+        The movie ends with a dwindling Resistance and Rey's commitment to continuing the Jedi path.
+      </p>
+
+      <p>
+        "Star Wars: Episode IX - The Rise of Skywalker" (2019):
+        The final chapter of the sequel trilogy sees the return of Emperor Palpatine, who has secretly survived and seeks to regain power.
+        The film delves into the origins of Rey's parentage and her connection to the Force.
+        It concludes with a climactic battle against the Sith and the ultimate fate of Kylo Ren and the legacy of the Skywalker family.
+      </p>
+
+      <p>
+        The sequel trilogy introduces a new generation of heroes and villains while paying homage to the original characters. 
+        It continues the struggle between the light and dark sides of the Force, as well as the fight for freedom and justice in the galaxy.
+        While these films have generated varied opinions among fans and critics, they contribute to the ongoing narrative of the Star Wars universe and 
+        offer a fresh perspective on the classic themes of the franchise.
+      </p>
+
       <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+        <img src="images/rsz_prequelimagepage3.jpg" alt="image for page3">
+        <img src="images/rsz_1sequelimagepage3.jpg" alt="image for page3">
 
       </ul>
       <hr>
