--- a/finalproject/site-plan.html
+++ b/finalproject/site-plan.html
@@ -215,21 +215,21 @@
 
       <h3>Home</h3>
       <p>         
-        [Any additional details about home that the wireframe does not make clear]
+        [The quotes will probaly be smaller]
       </p>
-      <img src="#" alt="home page wireframe">
+      <img src="images/siteplanhomepage.jpg" alt="home page wireframe">
 
       <h3>[Page 2]</h3>
       <p>         
-        [Any additional details about page 2 that the wireframe does not make clear]
+        [explaination of movies here]
       </p>
-      <img src="#" alt="page 2 wireframe">
+      <img src="images/siteplanpage2.jpg" alt="page 2 wireframe">
 
       <h3>[Page 3]</h3>
       <p>         
-        [Any additional details about page 3 that the wireframe does not make clear]
+        [The circles are images]
       </p>
-      <img src="#" alt="page 3 wireframe">
+      <img src="images/siteplanpage3.jpg" alt="page 3 wireframe">
     </main>
   </body>
 
