--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <a href="wwr/index.html">White Water Rafting Website</a>
     <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
     <a href="positioning.html">Positioning Activity</a>
-    <a href="#">Personal Website</a>
+    <a href="finalproject/index.html">Personal Website</a>
     <a href="finalproject/site-plan.html">Personal Siteplan</a>
   </nav>
 </body>
