--- a/finalproject/moviesreview.html
+++ b/finalproject/moviesreview.html
@@ -16,7 +16,7 @@
         <nav>
           <a href="index.html">Home</a>
           <a href="moviesreview.html">Movies Review</a>
-          <a href="#">Meet the Characters</a>
+          <a href="meetthecharacters.html">Meet the Characters</a>
         </nav>
     </header>
     <main>
