--- a/finalproject/index.html
+++ b/finalproject/index.html
@@ -17,24 +17,22 @@
         <nav>
           <a href="index.html">Home</a>
           <a href="moviesreview.html">Movies Review</a>
-          <a href="#">Meet the Characters</a>
+          <a href="meetthecharacters.html">Meet the Characters</a>
         </nav>
       </header>
+      <div id="hero">
+        <img
+          id="hero-img"
+          src="images/rsz_2star_wars_wording.jpg" alt="Fight Sceen"
+        />
+        <h3>Starwars Movie Fan Page</h3>
+      </div>
       <main class="home-main">
-        <div id="hero">
-            <img
-              id="hero-img"
-              src="images/rsz_2star_wars_wording.jpg" alt="Fight Sceen"
-            />
-            <h3>Starwars Movie Fan Page</h3>
-        </div>
-        <section class="textbox">
+          <section class="textbox">
             <p>A long time ago in a galaxy far, far away..."Star Wars" is a popular and enduring science fiction franchise that was created by filmmaker George Lucas.
                 At its core, Star Wars is an epic space opera set in a distant galaxy "far, far away." The saga is known for its rich and expansive lore, featuring a diverse cast of characters, intricate world-building, and a timeless battle between the forces of good and evil. 
                 Key elements of the Star Wars universe include the mystical Force, which grants individuals special abilities, and the ongoing conflict between the Jedi, who serve as guardians of peace and justice, and the Sith, who seek power and domination.
             </p>
-        </section>
-        <section class="textbox-img">
             <img
               id="text-img"
               src="images/homepageimage1.jpg" alt="Starwars poster"
