--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <a href="positioning.html">Positioning Activity</a>
     <a href="finalproject/index.html">Personal Website</a>
     <a href="finalproject/site-plan.html">Personal Siteplan</a>
+    <a href="component.html">Accordian Component</a>
   </nav>
 </body>
 </html>
