--- a/finalproject/index.html
+++ b/finalproject/index.html
@@ -35,9 +35,10 @@
             </p>
             <img
               id="text-img"
-              src="images/homepageimage1.jpg" alt="Starwars poster"
+              src="images/rszhompagetextbox.jpg" alt="Starwars poster"
             />
         </section>
+        <section class="quotes">
         <div class="quote-1">
             <p> "The Force is not a power you have. It's not about lifting rocks. 
                 It's the energy between all things, a tension, a balance, that binds the universe together." - Luke Skywalker
@@ -48,12 +49,21 @@
                 “Fear is the path to the dark side. Fear leads to anger. Anger leads to hate. Hate leads to suffering.” - Yoda
             </p>
         </div>
+        </section>
+          
       </main>
       <footer>
         <p>&copy;2023 Taylor Sanders</p>
         <a href="site-plan.html">Site Plan</a>
-        <a href="#"><img src="#"/></a>
-        <a href="#"><img src="#"/></a>
+        <a href="https://facebook.com" target="_blank">
+          <img src="images/facebook SW homepage.png" alt="fb icon" />
+        </a>
+        <a href="https://twitter.com" target="_blank">
+          <img src="images/twitter SW homepage.png" alt="twitter icon" />
+        </a>
+        <a href="https://instagram.com" target="_blank">
+          <img src="images/instagram SW homepage.png" alt="instagram icon" />
+        </a>
       </footer>
 </body>
 </html>
