--- a/finalproject/meetthecharacters.html
+++ b/finalproject/meetthecharacters.html
@@ -34,7 +34,7 @@
         <div class="Princessleia">
             <img src="images/rsz_leaiapage3.jpg" alt="Princess Leia">
             <p>
-                Princess Leia Organa is a prominent character in the Star Wars saga.  Leia is a member of the Rebel Alliance fighting against the tyrannical Galactic Empire.  Throughout the original trilogy, 
+                <b>Princess Leia Organa</b> is a prominent character in the Star Wars saga.  Leia is a member of the Rebel Alliance fighting against the tyrannical Galactic Empire.  Throughout the original trilogy, 
                 she develops a close bond with Luke Skywalker and Han Solo. The character is iconic for her leadership, iconic hairstyle, and memorable moments.
                 Leia's legacy extends beyond the original trilogy, as she continues to be a symbol of resistance and leadership in the broader Star Wars universe. 
             </p>
@@ -42,14 +42,14 @@
         <div class="HanSolo">
             <img src="images/rsz_1hansolopage3.jpg" alt="Han Solo">
             <p>
-                Han Solo is a charismatic and roguish character in the Star Wars saga. Introduced in "Star Wars: Episode IV - A New Hope," Han is a skilled pilot and captain of the Millennium Falcon, 
+                <b>Han Solo</b> is a charismatic and roguish character in the Star Wars saga. Introduced in "Star Wars: Episode IV - A New Hope," Han is a skilled pilot and captain of the Millennium Falcon, 
                 a fast and iconic starship. Initially motivated by self-interest and money, Han becomes an unexpected hero as he joins the Rebel Alliance in their fight against the oppressive Galactic Empire.
             </p>
         </div>
         <div class="DarthVader">
             <img src="images/rsz_darthvadorpage3.jpg" alt="Darth Vader">
             <p>
-                Darth Vader, formerly known as Anakin Skywalker, is a central antagonist in the Star Wars saga. 
+                <b>Darth Vader</b>, formerly known as Anakin Skywalker, is a central antagonist in the Star Wars saga. 
                 Anakin Skywalker starts as a gifted and powerful Jedi with a strong connection to the Force. However, seduced by the dark side and manipulated by Emperor Palpatine,
                 he succumbs to fear, anger, and the desire for power. Anakin's fall to the dark side is complete when he becomes Darth Vader, a Sith Lord serving the Galactic Empire.
             </p>
@@ -57,7 +57,7 @@
         <div class="Yoda">
             <img src="images/rsz_yodapage3.jpg" alt="Yoda">
             <p>
-                Yoda, a diminutive and wise Jedi Master, is a legendary character in the Star Wars saga.Yoda becomes an iconic figure known for his unique speech pattern and profound wisdom. 
+                <b>Yoda</b>, a diminutive and wise Jedi Master, is a legendary character in the Star Wars saga.Yoda becomes an iconic figure known for his unique speech pattern and profound wisdom. 
             </p>
         </div>
         <h3 class="sequels">
@@ -66,7 +66,7 @@
         <div class="Rey">
             <img src="images/rsz_1reypage3.jpg" alt="Rey">
             <p>
-                Rey is a central character in the Star Wars sequel trilogy. Rey is a scavenger on the desert planet Jakku, living a solitary life until she discovers a droid carrying crucial information sought by both the Resistance and the First Order.
+                <b>Rey</b> is a central character in the Star Wars sequel trilogy. Rey is a scavenger on the desert planet Jakku, living a solitary life until she discovers a droid carrying crucial information sought by both the Resistance and the First Order.
                 As the trilogy unfolds, Rey's journey becomes central to the overarching narrative. She discovers her innate Force sensitivity and seeks guidance from the missing Luke Skywalker. 
                 Throughout Rey grapples with her identity and the temptation of the dark side.
             </p>
@@ -74,7 +74,7 @@
         <div class="KyloRen">
             <img src="images/rsz_kylorenpage3.jpg" alt="Kylo Ren">
             <p>
-                Kylo Ren is the dark and conflicted enforcer of the First Order, initially known as Ben Solo, the son of Han Solo and Leia Organa.
+                <b>Kylo Ren</b> is the dark and conflicted enforcer of the First Order, initially known as Ben Solo, the son of Han Solo and Leia Organa.
                 Kylo Ren is seduced by the dark side of the Force, idolizing his grandfather, Darth Vader. He struggles with internal conflict, torn between the light and dark sides. 
                 Throughout the trilogy, Kylo's journey is marked by his quest for power, a desire to emulate Vader, and his evolving relationship with Rey.
             </p>
@@ -82,14 +82,14 @@
         <div class="Finn">
             <img src="images/rsz_finnpage3.jpg" alt="Finn">
             <p>
-                Finn begins as a stormtrooper for the First Order but defects after witnessing their brutality. Finn's character is marked by his moral conflict and desire to escape the violence of the First Order.
+                <b>Finn</b> begins as a stormtrooper for the First Order but defects after witnessing their brutality. Finn's character is marked by his moral conflict and desire to escape the violence of the First Order.
                 He forms a close bond with Rey and later joins the Resistance, where he becomes a key figure in the fight against the First Order
             </p>
         </div>
         <div class="PoeDameron">
             <img src="images/rsz_1poepage3.jpg" alt="Poe Dameron">
             <p>
-                Poe Dameron is a charismatic and skilled pilot in the Star Wars sequel trilogy. Poe is a key member of the Resistance, fighting against the oppressive First Order.
+                <b>Poe Dameron</b> is a charismatic and skilled pilot in the Star Wars sequel trilogy. Poe is a key member of the Resistance, fighting against the oppressive First Order.
                 Poe is renowned for his exceptional piloting skills, often flying his trusty T-70 X-wing starfighter, the Black One.
                 Poe forms close friendships with Finn and Rey, becoming an integral part of the central trio.
             </p>
@@ -99,13 +99,13 @@
         <p>&copy;2023 Taylor Sanders</p>
         <a href="site-plan.html">Site Plan</a>
         <a href="https://facebook.com" target="_blank">
-            <img src="images/facebook SW homepage.png" alt="fb icon" />
+            <img src="images/facebookSWhomepage.png" alt="fb icon" />
         </a>
         <a href="https://twitter.com" target="_blank">
-            <img src="images/twitter SW homepage.png" alt="twitter icon" />
+            <img src="images/twitterSWhomepage.png" alt="twitter icon" />
         </a>
         <a href="https://instagram.com" target="_blank">
-            <img src="images/instagram SW homepage.png" alt="instagram icon" />
+            <img src="images/instagramSWhomepage.png" alt="instagram icon" />
         </a>
     </footer>
 </body>
