--- a/finalproject/index.html
+++ b/finalproject/index.html
@@ -4,15 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Starwars </title>
-    <link rel="stylesheet" href="styles/styles.css" />
+    <link rel="stylesheet" href="styles/styles.css"/>
 </head>
 <body>
     <header>
         <a href="index.html" id="logo_link">
           <img
             class="logo"
-            src="images/rsz_logo-resizedagainlightsabers.png" alt="starwars logo"
-          />
+            src="images/rsz_logo-resizedagainlightsabers.png" alt="starwars logo"/>
         </a>
         <nav>
           <a href="index.html">Home</a>
@@ -23,8 +22,7 @@
       <div id="hero">
         <img
           id="hero-img"
-          src="images/rsz_2star_wars_wording.jpg" alt="Fight Sceen"
-        />
+          src="images/rsz_2star_wars_wording.jpg" alt="Fight Sceen"/>
         <h3>Starwars Movie Fan Page</h3>
       </div>
       <main class="home-main">
@@ -35,8 +33,7 @@
             </p>
             <img
               id="text-img"
-              src="images/rszhompagetextbox.jpg" alt="Starwars poster"
-            />
+              src="images/rszhompagetextbox.jpg" alt="Starwars poster"/>
         </section>
         <section class="quotes">
         <div class="quote-1">
@@ -56,13 +53,13 @@
         <p>&copy;2023 Taylor Sanders</p>
         <a href="site-plan.html">Site Plan</a>
         <a href="https://facebook.com" target="_blank">
-          <img src="images/facebook SW homepage.png" alt="fb icon" />
+          <img src="images/facebookSWhomepage.png" alt="fb icon"/>
         </a>
         <a href="https://twitter.com" target="_blank">
-          <img src="images/twitter SW homepage.png" alt="twitter icon" />
+          <img src="images/twitterSWhomepage.png" alt="twitter icon"/>
         </a>
         <a href="https://instagram.com" target="_blank">
-          <img src="images/instagram SW homepage.png" alt="instagram icon" />
+          <img src="images/instagramSWhomepage.png" alt="instagram icon"/>
         </a>
       </footer>
 </body>
