--- a/finalproject/moviesreview.html
+++ b/finalproject/moviesreview.html
@@ -26,7 +26,7 @@
                 The Original Trilogy
             </h2>
             <img class="movie-oneimg"
-                src="images/rsz_longorigninalpage2.jpg"/>
+                src="images/rsz_longorigninalpage2.jpg" alt="movie-one-img"/>
             <p> The first Star Wars trilogy, often referred to as the Original Trilogy, consists of three iconic films created by George Lucas and released between 1977 and 1983.
                 The trilogy introduced audiences to a timeless tale of adventure, heroism, and the battle between good and evil in a galaxy far, far away. 
                 It is also known for its timeless characters like Luke Skywalker, Princess Leia, Han Solo, and Darth Vader, as well as its groundbreaking special effects, epic space battles, and John Williams' iconic musical score.
@@ -38,7 +38,7 @@
                 The Prequel's
             </h2>
             <img class="movie-twoimg"
-                src="images/rsz_1longprequelpage2.jpg"/>
+                src="images/rsz_1longprequelpage2.jpg" alt="movie-two-img"/>
             <p> The Star Wars prequel trilogy, released between 1999 and 2005, serves as a chronological precursor to the Original Trilogy.
                 These films explore the rise of the Sith and the transformation of Anakin Skywalker into Darth Vader. The prequel trilogy also delves into the political machinations of the Galactic Republic, and the complexities of the Jedi Order.
                 It provides a deeper understanding of the events that shaped the galaxy and led to the rise of the Empire. While the prequels have garnered mixed reviews, they are an integral part of the larger Star Wars saga, adding depth and context to the story.
@@ -49,7 +49,7 @@
                 The Sequels
             </h2>
             <img class="movie-threeimg"
-                src="images/rsz_1sequelimagepage3.jpg"/>
+                src="images/rsz_1sequelimagepage3.jpg" alt="movie-three-img"/>
             <p> The Star Wars sequel trilogy, released between 2015 and 2019, continues the epic saga by introducing new characters while revisiting beloved ones from the Original Trilogy. 
                 The sequel trilogy introduces a new generation of heroes and villains while paying homage to the original characters. 
                 It continues the struggle between the light and dark sides of the Force, as well as the fight for freedom and justice in the galaxy.
@@ -62,13 +62,13 @@
         <p>&copy;2023 Taylor Sanders</p>
         <a href="site-plan.html">Site Plan</a>
         <a href="https://facebook.com" target="_blank">
-            <img src="images/facebook SW homepage.png" alt="fb icon" />
+            <img src="images/facebookSWhomepage.png" alt="fb icon" />
         </a>
         <a href="https://twitter.com" target="_blank">
-            <img src="images/twitter SW homepage.png" alt="twitter icon" />
+            <img src="images/twitterSWhomepage.png" alt="twitter icon" />
         </a>
         <a href="https://instagram.com" target="_blank">
-            <img src="images/instagram SW homepage.png" alt="instagram icon" />
+            <img src="images/instagramSWhomepage.png" alt="instagram icon" />
         </a>
     </footer>
 </body>
